Fix scrollbar

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -229,7 +229,6 @@ body div.adjustments-container {
   top: 5vh;
   min-width: 400px;
   max-height: 500px;
-  overflow-y: scroll;
   margin: auto;
   padding: 50px;
   z-index: 500;
