--- a/public/stylesheets/sass/index.sass
+++ b/public/stylesheets/sass/index.sass
@@ -77,7 +77,7 @@ body
     top: 5vh
     min-width: 400px
     max-height: 500px
-    overflow-y: scroll
+    // overflow-y: scroll
     
     margin: auto
     padding: 50px
